@@ -65,7 +65,7 @@ public class SdefElement extends Element {
     public void printXML(Appendable dos, DicOpts opt) throws IOException {
         // write blank lines and processingComments from original file
         dos.append(prependCharacterData);
-        dos.append(makeCommentIfData(processingComments));
+        if (!opt.noProcessingComments) dos.append(makeCommentIfData(processingComments));
         String comment = "";
         if (this.comment != null) {
             comment = "\tc=\"" + getComment() + "\"";
